# Text-Summarizer

./: Constants.h  DocumentParser.cpp  DocumentParser.h  Process.md  README.md  README2.md  Results.md  SparseVector.cpp  Text.txt  TextRank.cpp  TextRank.h  TextSummary.txt  TfIdf.cpp  TfIdf.h  main.cpp  words_with_periods.txt
Files/: CMakeLists.txt  Constants.h  DocumentParser.cpp  DocumentParser.h  SparseVector.cpp  SparseVector.h  Text.txt  TextRank.cpp  TextRank.h  TextSummary.txt  TfIdf.cpp  TfIdf.h  main.cpp
